# lorecraft-core

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
compositor/: package.json  tsconfig.json
compositor/src/: ShotComposition.tsx  index.ts
scripts/: check-system.sh  common.sh  download-loras.sh  ensure-node.sh  fix-nccl.sh  healthcheck.sh  install-comfyui-nodes.sh  install-comfyui.sh  install-compositor.sh  install-cosyvoice.sh  install-fish-speech.sh  install-models.sh  install-musetalk.sh  install-python.sh  install-system-deps.sh  install-vllm.sh  install-wan.sh  pin-numpy-opencv.sh  repair-gpu-stack.sh  serve-comfyui.sh  serve-cosyvoice.sh  serve-vllm.sh
src/lorecraft_core/: __init__.py  api.py  cli.py  config.py  health.py
src/lorecraft_core/services/: cosyvoice_server.py
tests/: test_health.py
workflows/comfyui/: README.md
