[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lorecraft-core"
version = "0.1.0"
description = "LoreCraft anime production engine — core workers and orchestration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
lorecraft = "lorecraft_core.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
